--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,12 @@
 *.exe
 *.o
 *.so
- 
+
+# Development Libraries #
+#########################
+node_modules/
+config.json
+
 # Packages #
 ############
 # it's better to unpack these files and commit the raw source
