--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,8 @@
 /node_modules export-ignore
 .gitattributes export-ignore
 .gitignore export-ignore
+.idea export-ignore
+/.idea export-ignore
 package.json export-ignore
 Gruntfile.js export-ignore
 README.md export-ignore
