--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pro-sites",
-  "version": "3.5.0",
+  "version": "3.5.5",
   "description": "Pro Sites Plugin",
   "repository": {
     "type": "git",
@@ -10,6 +10,10 @@
   "license": "GPL2",
   "devDependencies": {
     "grunt": "^0.4.5",
-    "grunt-wp-i18n": "^0.4.9"
+    "grunt-wp-i18n": "^0.4.9",
+    "grunt-contrib-clean": "^1.0.0",
+    "grunt-contrib-compress": "^1.4.1",
+    "grunt-contrib-copy": "^1.0.0",
+    "load-grunt-tasks": "^3.5.2"
   }
 }
