--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "name": "pro-sites",
-  "version": "3.5.9.3",
-  "description": "Pro Sites Plugin",
-  "repository": {
-    "type": "git",
-    "url": "git@bitbucket.org:incsub/pro-sites.git"
+  "version": "3.6.0-beta.1",
+  "private": true,
+  "description": "The ultimate multisite site upgrade plugin, turn regular sites into multiple pro site subscription levels selling access to storage space, premium themes, premium plugins and much more!",
+  "keywords": [],
+  "homepage": "https://premium.wpmudev.org/project/pro-sites/",
+  "license": "GPL-2.0",
+  "author": {
+    "name": "WPMU DEV",
+    "url": "https://premium.wpmudev.org"
   },
-  "author": "WPMUDev",
-  "license": "GPL2",
+  "main": "pro-sites.php",
+  "repository": "git+https://bitbucket.org/incsub/pro-sites.git",
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-wp-i18n": "^0.4.9",
