--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
   },
   "main": "pro-sites.php",
   "repository": "git+https://bitbucket.org/incsub/pro-sites.git",
+  "scripts": {
+    "translate": "clear && grunt translate",
+    "build": "clear && grunt prepare && grunt build"
+  },
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-wp-i18n": "^0.4.9",
